[tool.poetry]
name = "excel-tools"
version = "0.1.0"
description = "Help to work with Excel files in an easy way"
authors = ["Alejandro González Momblán <agelrenorenardo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openpyxl = "^3.1.2"
inquirer = "^3.1.4"
pandas = "^2.1.3"
rich = "^13.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
